...
	) {
		Column(
			modifier = Modifier.padding(16.dp)
		) {
			SectionHeader(
				title = "Recent sessions",
				actionText = "See all",
				actionModifier = Modifier.testTag(SESSIONS_SEE_ALL_BUTTON),
				onActionClick = {
					onSeeAllClick(bookId)
				}
			)

...
