appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/single-book-with-session
- extendedWaitUntil:
    visible:
      id: "library_book_card"
    timeout: 30000
- tapOn:
    id: "library_book_card"
    index: 0
- assertVisible:
    id: "book_detail_session_row"
- tapOn: 
    text: "See all"
    index: 0
- tapOn: "Delete session"
- tapOn: "Delete"
- assertNotVisible:
    id: "book_sessions_session_card"
- assertVisible:
    id: "book_sessions_empty_screen"
