appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/single-book
- extendedWaitUntil:
    visible:
      id: "library_book_card"
    timeout: 30000
- tapOn:
    id: "library_book_card"
- tapOn: "Edit book"
- tapOn: 
    id: "add_edit_book_title_field"
    point: 95%,50%
- eraseText
- inputText: "Sherlock Holmes"
- tapOn: 
    id: "add_edit_book_author_field"
    point: 95%,50%
- eraseText
- inputText: "Arthur Conan Doyle"
- tapOn: 
    id: "add_edit_book_total_pages_field"
    point: 95%,50%
- eraseText
- inputText: "150"
- hideKeyboard
- tapOn:
    id: "add_edit_book_save_button"
- assertVisible:
    id: "book_detail_book_card"
    containsDescendants:
      - text: "Sherlock Holmes"
      - text: "Arthur Conan Doyle"