appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/single-book-with-session
- extendedWaitUntil:
    visible:
      id: "library_book_card"
    timeout: 30000
- tapOn:
    id: "library_book_card"
- tapOn: 
    text: "See all"
    index: 0
- tapOn:
    id: "book_sessions_session_card"
- tapOn:
    id: "add_edit_session_date_field"
- tapOn: "Switch to text input mode"
- eraseText
- inputText: "01012026"
- tapOn: "Aceptar"
- tapOn:
    id: "add_edit_session_start_page_field"
    point: 90%,50%
- eraseText
- inputText: "10"
- tapOn:
    id: "add_edit_session_end_page_field"
    point: 90%,50%
- eraseText
- inputText: "30"
- tapOn:
    id: "add_edit_session_minutes_field"
- inputText: "30"
- tapOn:
    id: "add_edit_session_note_field"
- eraseText
- inputText: "Edited session note"
- hideKeyboard
- tapOn:
    id: "add_edit_session_save_button"
- assertVisible:
    id: "book_sessions_session_card"
    containsDescendants: 
        - text: "1/1/2026"
        - text: "Pages 10 - 30"
        - text: "30 minutes"
        - text: "Edited session note"


