appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/multiple-books
- assertVisible:
    id: "library_book_card"
    index: 2
- tapOn:
    id: "library_filter_want_to_read"
- assertVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Want to read"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Reading"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Finished"
- tapOn:
    id: "library_filter_reading"
- assertVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Reading"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Want to read"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Finished"
- tapOn:
    id: "library_filter_finished"
- assertVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Finished"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Want to read"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Reading"
